--- a/src/Styles/HomeHeader.css
+++ b/src/Styles/HomeHeader.css
@@ -50,7 +50,8 @@
     z-index: 10;
 }
 .menuitem{
-    padding: 10px;
+    display: block;
+    padding: 12px;
     font-size: 14px;
     line-height: 24px;
     color: #252525;
