--- a/src/Styles/MenuPage.css
+++ b/src/Styles/MenuPage.css
@@ -235,7 +235,7 @@
 
 .menu-order-but {
     cursor: pointer;
-    width: max-content;
+    width: 40%;
     margin: auto;
     padding: 3px 22px;
     background-image: linear-gradient(#FF9621, #F9561E);
@@ -323,6 +323,10 @@
 }
 .review::after {
     background-size: 30%;
+}
+.menu-order-but {
+    width: 22%;
+
 }
 }
 
@@ -495,6 +499,7 @@
 }
 
 .menu-order-but {
+    width: 15%;
     padding: 8px 36px;
     border-radius: 20px;
     font-size: 18px;
